--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -3173,7 +3173,56 @@ class Solution {
 }
 ~~~
 
-#### 14    链表删除重复数据
+#### 14 链表删除重复数据
+
+#### 15 链表求和
+
+给定两个用链表表示的整数，每个节点包含一个数位。
+
+这些数位是反向存放的，也就是个位排在链表首部。
+
+编写函数对这两个整数求和，并用链表形式返回结果。
+
+~~~
+输入：(7 -> 1 -> 6) + (5 -> 9 -> 2)，即617 + 295
+输出：2 -> 1 -> 9，即912
+~~~
+
+~~~java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+		int carray = 0;
+		ListNode head = new ListNode(-1);
+		ListNode pre = head;
+		while(l1 != null || l2 != null || carray != 0) {
+			int sum = carray;
+			if(l1 != null) {
+				sum += l1.val;
+				l1 = l1.next;
+			}
+			if(l2 != null) {
+				sum += l2.val;
+				l2 = l2.next;
+			}
+			pre.next = new ListNode(sum%10);
+			pre = pre.next;
+			carray = sum/10;
+			
+		}
+		return head.next;
+    }
+}
+~~~
+
+
 
 ## 【字符串】
 
