--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -9302,6 +9302,54 @@ Queue is empty, consumer 16 is waiting, size：0
 >**lock**：保证每次只有一个线程能够获取到资源。
 
 ~~~java
+ 
+public static void test6() {
+		new Thread(() -> {
+			while (i < 10) {
+				synchronized (block) {
+					if (flag) {
+						try {
+							block.wait();
+						} catch (Exception e) {
+							e.printStackTrace();
+						}
+					} else {
+						System.out.println(Thread.currentThread().getName()
+								+ "----" + (i++));
+						flag = true;
+						block.notifyAll();
+					}
+ 
+				}
+			}
+		}).start();
+ 
+		new Thread(() -> {
+			while (j < 10) {
+				synchronized (block) {
+ 
+					if (!flag) {
+						try {
+							block.wait();
+						} catch (Exception e) {
+							e.printStackTrace();
+						}
+					} else {
+						System.out.println(Thread.currentThread().getName()
+								+ "----" + (j++));
+						flag = false;
+						block.notifyAll();
+					}
+ 
+				}
+			}
+		}).start();
+	}
+~~~
+
+//多线程交替打印
+
+~~~java
 
 public class PrintABCUsingLock {
  
