--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -524,6 +524,11 @@ Collections.reverse(l);
 **代码：**
 
 ~~~java
+  /* 基本的二叉树节点 */
+class TreeNode {
+    int val;
+    TreeNode left, right;
+}
 //**********非递归的先序遍历**********  
    //前序遍历手算的思想，先变访问边找，找到最左下方的，然后向上再向访问右边的
     public static void iterativePreOrder_1(TreeNode p) {
