--- a/编程总结/总结2.md
+++ b/编程总结/总结2.md
@@ -2365,6 +2365,75 @@ TreeNode* build(1...) {
 
 #### 25  [实现 Trie (前缀树) ](https://leetcode-cn.com/problems/implement-trie-prefix-tree)【Hard】
 
+**向 Trie 树中插入键**
+
+我们通过搜索 Trie 树来插入一个键。我们从根开始搜索它对应于第一个键字符的链接。有两种情况：
+
+* 链接存在。沿着链接移动到树的下一个子层。算法继续搜索下一个键字符。
+* 链接不存在。创建一个新的节点，并将它与父节点的链接相连，该链接与当前的键字符相匹配。
+  重复以上步骤，直到到达键的最后一个字符，然后将当前节点标记为结束节点，算法完成。
+
+**在 Trie 树中查找键**
+
+每个键在 trie 中表示为从根到内部节点或叶的路径。我们用第一个键字符从根开始，。检查当前节点中与键字符对应的链接。有两种情况：
+
+* 存在链接。我们移动到该链接后面路径中的下一个节点，并继续搜索下一个键字符。
+* 不存在链接。若已无键字符，且当前结点标记为 isEnd，则返回 true。否则有两种可能，均返回 false :
+  还有键字符剩余，但无法跟随 Trie 树的键路径，找不到键。
+  没有键字符剩余，但当前结点没有标记为 isEnd。也就是说，待查找键只是Trie树中另一个键的前缀。
+
+**查找 Trie 树中的键前缀**
+该方法与在 Trie 树中搜索键时使用的方法非常相似。我们从根遍历 Trie 树，直到键前缀中没有字符，或者无法用当前的键字符继续 Trie 中的路径。与上面提到的“搜索键”算法唯一的区别是，到达键前缀的末尾时，总是返回 true。我们不需要考虑当前 Trie 节点是否用 “isend” 标记，因为我们搜索的是键的前缀，而不是整个键。
+
+~~~java
+public class Trie {
+    private boolean is_string=false;
+    private Trie next[]=new Trie[26];
+
+    public Trie(){}
+//
+    public void insert(String word){//插入单词
+        Trie root=this;
+        char w[]=word.toCharArray();
+        for(int i=0;i<w.length;++i){
+            if(root.next[w[i]-'a']==null)root.next[w[i]-'a']=new Trie();
+            root=root.next[w[i]-'a'];
+        }
+        root.is_string=true;
+    }
+
+    public boolean search(String word){//查找单词
+        Trie root=this;
+        char w[]=word.toCharArray();
+        for(int i=0;i<w.length;++i){
+            if(root.next[w[i]-'a']==null)return false;
+            root=root.next[w[i]-'a'];
+        }
+        return root.is_string;
+    }
+    
+    public boolean startsWith(String prefix){//查找前缀
+        Trie root=this;
+        char p[]=prefix.toCharArray();
+        for(int i=0;i<p.length;++i){
+            if(root.next[p[i]-'a']==null)return false;
+            root=root.next[p[i]-'a'];
+        }
+        return true;
+    }
+}
+
+/**
+ * Your Trie object will be instantiated and called as such:
+ * Trie obj = new Trie();
+ * obj.insert(word);
+ * boolean param_2 = obj.search(word);
+ * boolean param_3 = obj.startsWith(prefix);
+ */
+~~~
+
+
+
 ## 【链表】
 
 ####  1 反转链表
